<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <!-- <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
        <item
            android:id="@+id/nav_average"
            android:icon="@drawable/ic_cubes"
            android:title="@string/title_activity_average" />
        <!-- https://www.dreamstime.com/stock-illustration-linear-function-equation-mathematics-icon-vector-image-can-also-be-used-math-symbols-suitable-use-web-apps-mobile-apps-image96006452 -->
        <item
            android:id="@+id/nav_liniowa"
            android:icon="@drawable/ic_line"
            android:title="@string/title_activity_liniowa" />
        <!-- https://www.dreamstime.com/stock-illustration-linear-function-equation-mathematics-icon-vector-image-can-also-be-used-math-symbols-suitable-use-web-apps-mobile-apps-image96006452 -->
        <item
            android:id="@+id/nav_kwadratowa"
            android:icon="@drawable/ic_parabola"
            android:title="@string/title_activity_kwadratowa" />
        <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/dimi-kazak" title="Dimi Kazak">Dimi Kazak</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
        <item
            android:id="@+id/nav_lotto"
            android:icon="@drawable/ic_dice"
            android:title="@string/title_activity_lotto" />
        <!-- <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
        <item
            android:id="@+id/nav_generliczb"
            android:icon="@drawable/ic_fi"
            android:title="@string/title_activity_generliczb" />
        <!-- <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
        <item
            android:id="@+id/nav_aurebesh"
            android:icon="@drawable/ic_darth_vader"
            android:title="@string/title_activity_aurebesh" />
        <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/srip" title="srip">srip</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
        <item
            android:id="@+id/nav_podsieci"
            android:icon="@drawable/ic_network"
            android:title="@string/title_activity_podsieci" />
        <!-- <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
        <item
            android:id="@+id/nav_systemyliczb"
            android:icon="@drawable/ic_binary"
            android:title="@string/title_activity_systemyliczb" />
        <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/kiranshastry" title="Kiranshastry">Kiranshastry</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_event"
            android:title="@string/title_activity_calendar" />
        <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/surang" title="surang">surang</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
        <item
            android:id="@+id/nav_crypto"
            android:icon="@drawable/ic_crypto"
            android:title="@string/title_activity_crypto" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/menu_contact" />
    </group>
</menu>