<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/viegoriginEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/rot13org"
                android:autofillHints="@string/rot13org"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/viegBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/szyfruj" />

            <Button
                android:id="@+id/viegclearBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear" />

            <Button
                android:id="@+id/viegcopyBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copying" />

            <EditText
                android:id="@+id/viegciphredEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/viegCiphred"
                android:autofillHints="@string/viegCiphred"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/viegkeyEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/viegKey"
                android:autofillHints="@string/viegKey"
                android:inputType="textPersonName" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>