<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/rot13originEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/rot13org"
                android:autofillHints="@string/rot13org"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/rot13Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/szyfruj" />

            <Button
                android:id="@+id/rot13clearBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear" />

            <Button
                android:id="@+id/rot13copyBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copying" />

            <EditText
                android:id="@+id/rot12ciphredEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/rot13ciphred"
                android:autofillHints="@string/rot13ciphred"
                android:gravity="start|top"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>