<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hourTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hour"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/notifytitleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/notiftitle"
            android:ems="10"
            android:hint="@string/notiftitle"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/notifysubtitleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/notifsubtitle"
            android:ems="10"
            android:hint="@string/notifsubtitle"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/calendarBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>